--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.6",
+    "dotenv": "^16.0.3",
     "google-spreadsheet": "^3.3.0"
   }
 }
